--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -33,6 +33,8 @@ a {
 img {
   display: block;
   width: 100%;
+  height: 100%;
+  flex-grow: 1;
 }
 
 .gallery {
@@ -47,26 +49,17 @@ img {
 
 .gallery-item {
   flex-basis: calc((100% - 48px) / 3);
-}
-
-.feedback-form {
+  border: 1px solid #212121;
   display: flex;
   flex-direction: column;
-  gap: 8px;
-  padding: 24px;
-
-  background-color: #fff;
-  width: 408px;
-  border-radius: 18px;
-  margin: 100px auto 0;
-
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  justify-content: space-between;
 }
 
-label {
+form {
   display: flex;
-  flex-direction: column;
   gap: 8px;
+  justify-content: center;
+  margin-top: 36px;
 }
 
 button {
@@ -92,30 +85,7 @@ button:hover {
   background-color: #6c8cff;
 }
 
-.back {
-  text-align: center;
-  cursor: pointer;
-  background-color: #6082ff;
-  font-size: 16px;
-  line-height: 1.5;
-  font-weight: 500;
-  letter-spacing: 0.04em;
-  color: #fff;
-  border: none;
-
-  padding: 8px 16px;
-
-  display: block;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.back:hover {
-  background-color: #425fc6;
-}
-
-input,
-textarea {
+input {
   width: 360px;
   padding: 8px 16px;
   border: 1px solid #8584846f;
@@ -133,13 +103,38 @@ textarea {
 }
 
 input:hover,
-input:focus,
-textarea:hover,
-textarea:focus {
+input:focus {
   border-color: #000000;
 }
 
-textarea {
-  resize: none;
-  margin-bottom: 8px;
+.info {
+  display: flex;
+  justify-content: space-around;
+}
+
+.info p {
+  text-align: center;
+}
+
+.loader {
+  border: 8px solid #f3f3f3; /* Light grey */
+  border-top: 8px solid #0399fd; /* Blue */
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 2s linear infinite;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
